--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.5)
+cmake_minimum_required(VERSION 3.10)
 project(mymuduo)
 
 # cmake => makefile   make
@@ -11,3 +11,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -fPIC")
 aux_source_directory(. SRC_LIST)
 # 编译生成动态库mymuduo
 add_library(mymuduo SHARED ${SRC_LIST})
+
+# 添加测试模块
+add_subdirectory(example)
